[gd_scene load_steps=3 format=3 uid="uid://cfmunflda7188"]

[ext_resource type="Script" path="res://scripts/screens/end_screen.gd" id="1_n660e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2led"]
bg_color = Color(0.249794, 0.331523, 0.581467, 1)

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_n660e")

[node name="Panel" type="Panel" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 1156.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r2led")

[node name="BackButton" type="Button" parent="."]
offset_left = 311.0
offset_top = 376.0
offset_right = 483.0
offset_bottom = 421.0
text = "Return to Title"

[node name="QuitButton" type="Button" parent="."]
offset_left = 657.0
offset_top = 384.0
offset_right = 849.0
offset_bottom = 424.0
text = "Quit
"

[node name="GameOverMsg" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 165.0
offset_right = 102.0
offset_bottom = 215.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 34
text = "GAME OVER"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 286.0
offset_right = 28.0
offset_bottom = 334.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "TEXT
"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
